# midi-tui

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  config.cpp  main.cpp  util.cpp
src/include/: config.h  util.h
